# pp-security-master

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  REUSE.toml  SECURITY.md  alembic.ini  noxfile.py  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  sonar-project.properties
.claude/: settings.json
.claude/commands/: workflow-implementation.md  workflow-review-cycle.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci-gate.yml  ci.yml  claude-baseline-review.yml  codeql.yml  coverage.yml  dependency-standards-validation.yml  pr-validation.yml  python-compatibility.yml  renovate-auto-merge.yml  reuse.yml  sbom.yml  scorecard.yml  security-analysis.yml  sonarcloud.yml
crosswalks/: gics_to_brx_plus.yaml  ibor_to_xero_gl.yaml  provider_sector_to_gics.yaml  security_type_to_cfi.yaml  sic_naics_to_gics.yaml
docs/: known-vulnerabilities.md
docs/adr/: ADR-001-transaction-centric-architecture.md  ADR-003-securities-master-data-sourcing-hierarchy.md  ADR-005-external-api-integration-strategy.md  ADR-006-security-and-authentication-architecture.md  ADR-007-deployment-and-infrastructure-strategy.md  ADR-008-external-repository-integration-strategy.md  ADR-009-institutional-grade-quantitative-portfolio-analytics.md  ADR-010-performance-testing-strategy.md  ADR-011-production-monitoring-architecture.md  ADR-012-data-quality-reporting-reconciliation.md  ADR-013-ai-portfolio-analysis-integration.md  ADR-014-pp-xml-import-and-cli.md  ADR-015-classification-source-coverage-and-tier4-scope.md  ADR-016-crosswalk-architecture-and-ibor-abor-navigation.md
docs/planning/: PROJECT-PLAN.md  roadmap.md
docs/planning/phase-1-templates/: wells_fargo_parser_complete.py
docs/planning/phase-2-templates/: external_service_resilience.py  fund_classification_pipeline.py
docs/planning/phase-4-templates/: benchmark_security_generator.py
docs/planning/phase-5-templates/: security_master_gradio_interface.py
docs/project/: IBOR_ABOR_IDENTIFIER_CONTRACT.md  MVP.md  PP_TAXONOMY_CATALOG.md  PROJECT_PLAN.md  ROADMAP_2026-06-19.md
docs/research/: taxonomy-gics-trbc-cfi-decision.md
docs/superpowers/plans/: 2026-04-20-global-alignment.md
docs/superpowers/specs/: 2026-04-20-global-alignment-design.md  2026-05-01-architecture-documentation-design.md
pytest_plugins/: coverage_hook_plugin.py
sample_data/: IBKR_Flex_Records_sample.xml  IBKR_Flex_Trades_sample.xml  PP_empty_USD_sample.xml  isin2secid_sample.json
scripts/: check_fips_compatibility.py  check_no_licensed_assignments.py  generate_requirements.sh  validate_taxonomy_json.py
seeds/: crypto_classification.yaml
sql/: env.py
sql/versions/: 2a08a665e4e1_account_mappings_and_consolidated_uq.py  32b7a96122d0_ibkr_open_positions.py  71ab9a687378_ibkr_non_trade_records.py  b8828ce648a2_baseline_schema.py  d3a1c0ffee01_d3_classification_provenance.py  d90f75a3b03e_entity_registry_tables_phase_e1.py
src/security_master/: cli.py  crosswalk.py  utils.py
src/security_master/classifier/: __init__.py  chain.py  crypto_seed.py  equity.py  manual.py  taxonomy_lookup.py  types.py
src/security_master/extractor/: __init__.py  _flex_common.py  ibkr_flex.py  ibkr_flex_records.py  ibkr_positions.py
src/security_master/patch/: pp_xml_export.py  pp_xml_import.py
src/security_master/storage/: __init__.py  account_models.py  database.py  entity.py  mappers.py  models.py  position_models.py  position_reconciliation.py  pp_models.py  schema_export.py  transaction_models.py  transaction_normalizer.py  validators.py  views.py
taxonomies/: README.md  accounting-xero-gl.taxonomy.json  asset-allocation.taxonomy.json  asset-classes.taxonomy.json  brx-plus-byron.taxonomy.json  industries-gics-sectors.taxonomy.json  industries-gics.taxonomy.json  regions-msci.taxonomy.json  type-of-security.taxonomy.json
taxonomies/diagrams/: brx_plus_taxonomy.puml  taxonomy_landscape.puml
tests/: conftest.py
tests/integration/: test_export_view_fed.py  test_ibkr_flex_import.py  test_normalize_transactions_cli.py  test_pp_xml_roundtrip.py  test_reconcile_positions_cli.py
tests/unit/: test_account_models.py  test_classification_crosswalks.py  test_classification_provenance.py  test_classifier_chain.py  test_classifier_equity.py  test_classifier_manual.py  test_classifier_taxonomy_lookup.py  test_cli.py  test_cli_classify.py  test_cli_commands.py  test_config_validation.py  test_crosswalk_resolver.py  test_crypto_seed.py  test_database.py  test_entity_registry.py  test_external_cache.py  test_external_errors.py  test_external_http.py  test_external_openfigi.py  test_external_sec_edgar.py  test_external_settings.py  test_flex_common.py  test_ibkr_flex_parse.py  test_ibkr_flex_persist.py  test_ibkr_flex_records_parse.py  test_ibkr_open_position_model.py  test_ibkr_positions_parse.py  test_ibkr_transaction_model.py  test_ibor_to_xero_gl_crosswalk.py  test_licensing_guard.py  test_mappers.py  test_position_reconciliation.py  test_pp_models.py  test_pp_xml_export.py  test_pp_xml_import_parse.py  test_pp_xml_import_persist.py  test_schema_export.py  test_transaction_normalizer.py  test_validators.py  test_views.py
