[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Project metadata (PEP 621 standard)
[project]
name = "pp-security-master"
version = "0.1.0"
description = "Security-Master Service for Portfolio Performance (PP) - centralized asset classification and taxonomy management"
authors = [{name = "Byron Williams", email = "byronawilliams@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["portfolio-performance", "securities", "classification", "taxonomy", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.11"
dependencies = [
    # Database dependencies
    "sqlalchemy>=2.0.36,<3.0.0",
    "psycopg2-binary>=2.9,<3.0.0",
    "alembic>=1.14.0,<2.0.0",
    # CLI and configuration
    "click>=8.1,<9.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    # HTTP client for OpenFIGI API
    "httpx>=0.27.0,<0.28.0",
    # Data validation
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    # Utilities
    "structlog>=24.0.0,<26.0.0",
    "rich>=14.0.0,<15.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "python-dateutil>=2.9.0,<3.0.0",
    "cryptography>=46.0.7",
    "defusedxml>=0.7.1,<0.8.0",
    "pyyaml>=6.0.2,<7.0.0",
    "toml>=0.10.2,<0.11.0",
]

[project.urls]
homepage = "https://github.com/ByronWilliamsCPA/pp-security-master"
repository = "https://github.com/ByronWilliamsCPA/pp-security-master"
documentation = "https://github.com/ByronWilliamsCPA/pp-security-master/wiki"

[project.scripts]
pp-master = "security_master.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.1",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.1.3",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "pytest-rerunfailures>=12.0",
    "pytest-benchmark>=4.0.0",  # Performance testing
    "pytest-html>=4.1.1",  # HTML test reports
    "hypothesis>=6.98.9",
    "faker>=37.0.0",
    "ruff==0.15.12",
    "basedpyright>=1.1.400",
    "bandit[toml]==1.7.7",
    "detect-secrets>=1.5.0",
    "pre-commit>=4.0.0",
    "nox>=2025.1.0",
    "ipython>=9.0.0",
    "ipdb>=0.13.13",
    "pip-audit>=2.9.0,<3.0.0",
    "pydoclint>=0.5.0",
    "interrogate>=1.7.0",
    "commitizen>=3.0.0",
]

# Hatchling package discovery for the src/ layout
[tool.hatch.build.targets.wheel]
packages = ["src/security_master"]


[tool.ruff]
line-length = 88
# Minimum supported version (see requires-python = ">=3.11"); Ruff uses this to
# gate pyupgrade rewrites, so it must track the floor, not the CI matrix ceiling.
target-version = "py311"
src = ["src", "tests"]
exclude = [
    "*.yaml",
    "*.yml",
    "sample_data/*",
    "schema_exports/*",
    "docs/planning/phase-1-templates/*",
    "docs/planning/phase-2-templates/*",
    "docs/planning/phase-4-templates/*",
    "docs/planning/phase-5-templates/*",
    # Alembic autogenerates these revision scripts; do not lint generated code.
    "sql/versions/*",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "YTT",  # flake8-2020
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "EM",   # flake8-errmsg
    "ISC",  # flake8-implicit-str_concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PGH",  # pygrep-hooks
    "PL",   # pylint
    "RUF",  # ruff-specific
    "FA",   # flake8-future-annotations
    "TCH",  # flake8-type-checking
    "FBT",  # flake8-boolean-trap
    "TRY",  # tryceratops
    "FURB", # refurb
    "LOG",  # flake8-logging
    "ASYNC",# flake8-async
    "RSE",  # flake8-raise
    "SLF",  # flake8-self
]
ignore = [
    "E501",    # line too long (handled by ruff format)
    "COM812",  # trailing comma; conflicts with ruff format (ruff warns to disable this)
    "B008",    # do not perform function calls in argument defaults
    "ANN401",  # dynamically typed expressions (Any)
    "S101",    # use of assert detected
    "PLR0913", # too many arguments
    "PLR2004", # magic numbers (for obvious values)
    "ARG002",  # unused arguments (interface compatibility)
    "SIM102",  # nested if statements (readability preference)
]

[tool.ruff.lint.per-file-ignores]
# Click injects --flag/--no-flag options as boolean positional parameters into
# the command callback; this is the documented Click pattern, not a flag-trap.
"src/security_master/cli.py" = ["FBT001"]
"tests/*" = ["S101", "S110", "ANN", "ARG", "PLR2004", "PLC0415", "T201"]
"scripts/*" = ["T20", "INP001", "ANN", "PLR0912", "PLR2004", "PTH123", "SIM118", "RUF013", "B007", "PLC0415", "G004", "S607", "S602", "S314", "S603", "RET504", "DTZ005", "RUF100"]
"noxfile.py" = ["ANN", "D"]
"*.yaml" = ["ALL"]
"*.yml" = ["ALL"]
# pytest plugins attach state to the config object via private attributes;
# this is the documented pytest pattern, not an encapsulation violation.
"pytest_plugins/*" = ["S603", "SLF001"]

[tool.ruff.lint.pylint]
max-branches = 12      # Ruff/pylint default; aligns with global PyStrict standard
max-statements = 75    # Increased from default 50 for industry standards

[tool.ruff.lint.isort]
known-first-party = ["security_master"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pip-audit]
# Documented, accepted CVEs. Each has a corresponding entry in
# docs/known-vulnerabilities.md with rationale and review date. The org
# reusable CI workflow (python-ci.yml) reads this list and passes each ID to
# pip-audit as --ignore-vuln, so the ignores live here as the single source of
# truth rather than hardcoded in the workflow.
ignore-vuln = [
    "GHSA-4xh5-x5gv-qwph",
    "GHSA-6vgw-5pg2-w6jp",
    "GHSA-58qw-9mgm-455v",
    "PYSEC-2022-42969",
]

[tool.pydoclint]
style = "google"
# Type hints live in signatures, not docstrings; do not require them in docstrings.
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
allow-init-docstring = true
exclude = '\.git|\.venv|\.nox'

[tool.basedpyright]
include = ["src/security_master"]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "strict"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers --strict-config --asyncio-mode=auto -m 'not slow' --tb=short --durations=10"
testpaths = ["tests"]
pythonpath = [".", "scripts"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::sqlalchemy.exc.MovedIn20Warning",  # SQLAlchemy compatibility
    "ignore::sqlalchemy.exc.SADeprecationWarning",  # SQLAlchemy deprecation warnings
]
markers = [
    # Primary execution control markers
    "slow: genuinely slow tests (excluded from CI/CD and local development)",
    "fast: development cycle tests (for IDE integration)",

    # Test pyramid layer taxonomy (for analysis and metrics)
    "unit: unit-level tests (pure functions/classes; no I/O, no network) - DEFAULT",
    "component: component-level tests (single bounded context incl. DB/container mocks)",
    "contract: consumer-driven contract tests (OpenFIGI API contract verifications)",
    "integration: cross-service integration tests (multi-service / real DB)",
    "e2e: user-facing end-to-end tests (full user journey via CLI)",

    # Non-functional test types (for analysis and selective execution)  
    "perf: performance/load tests (benchmarks, stress, timing assertions)",
    "performance: performance/load tests (alias for perf)",
    "security: runtime security assertions (input validation, SQL injection tests)",

    # Execution behavior markers
    "smoke: basic functionality validation tests",
    "no_parallel: tests that should not run in parallel",

    # Component-specific markers (Security Master specific)
    "database: database-related tests (PostgreSQL, Alembic)",
    "classifier: classification engine tests (fund, equity, bond classification)",
    "extractor: broker file extraction tests (PP XML, IBKR Flex, Wells CSV, AltoIRA PDF)",
    "api: external API integration tests (OpenFIGI API)",
    "storage: storage layer tests (models, mappers, validators)",
    "patch: PP XML/JSON patch generation tests",
]

# Note: Custom pytest plugins loaded via conftest.py or command line

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
dynamic_context = "test_function"  # Function-level coverage tracking
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "scripts/*",
    "sql/versions/*",  # Alembic migrations
    "schema_exports/*",  # Generated schema files
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    # Security Master specific
    "except DatabaseConnectionError:",  # DB connection fallbacks
    "if self.debug_mode:",  # Debug-only code
    "class .*\\(.*Protocol.*\\):",  # Protocol classes
]
precision = 2
show_missing = true
skip_covered = false
# TEMPORARY: source-level tests do not exist yet, so coverage is ~0%. The
# previous hand-rolled CI hid this with a per-run --cov-fail-under=0 override;
# the org reusable workflow honors this value directly, so it lives here as the
# single source of truth. Restore to 80 in ROADMAP Phase C, which backfills
# tests for storage/ and the XML round-trip and targets >=80% on touched modules.
fail_under = 0

[tool.coverage.html]
directory = "htmlcov"
show_contexts = true  # Show which tests cover each line

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", "scripts", "pytest_plugins"]
skips = ["B101", "B601"]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*_test.py"]

[tool.commitizen]
version_scheme = "semver"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = false
